# oss-repo-template

./: sshkey  sshkey.pub
labs/lab-01/: lab01.md  report.md
labs/lab-02/: Lab2.md  readme.md
labs/lab-05/: comparison.txt  ctest_output.txt  lab5.md
labs/lab-05/Lab-BuildSystemsExample/: CMakeCache.txt  CMakeLists.txt  Makefile  makefile.txt  program.c  static_block
labs/lab-05/Lab-BuildSystemsExample/source/: block.c
labs/lab-05/Step1/: CMakeLists.txt  tutorial.cxx
labs/lab-05/Step1_build/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake
labs/lab-05/Step2/: CMakeLists.txt  tutorial.cxx
labs/lab-05/Step2_build/: CMakeCache.txt  Makefile  Tutorial  cmake_install.cmake
labs/lab-05/Step2_build/MathFunctions/: Makefile  cmake_install.cmake
labs/lab-05/Step3/: tutorial.cxx
labs/lab-05/Step3_build/: CMakeCache.txt  Makefile  cmake_install.cmake
labs/lab-05/Step3_build/MathFunctions/: Makefile  cmake_install.cmake
labs/lab-05/Step4/: CMakeLists.txt
labs/lab-05/Step4_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
labs/lab-05/Step4_build/MathFunctions/: Makefile  cmake_install.cmake
labs/lab-05/Step5/MathFunctions/: mysqrt.cxx
labs/lab-05/Step5_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  Tutorial  cmake_install.cmake
labs/lab-06/: lab6.md  plot_degree_histogram.py  plot_words.py
labs/lab-08/: docker-compose.yaml  docker-compose.yml  dockerfile  hello.py  lab8.md  lab8links.md  link.md  report.md
labs/lab-09/: link.md  report.md
labs/lab-10/: link.md  test1.py
shared_files/: VpVXxKvIb-0.odt
(+3 files in other folders)
